2025-09-12 SCDM: Se corrige formulario de fecha de validez.

--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCintas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCintas.cshtml
@@ -2012,14 +2012,8 @@
 
                     //determina la fecha de validez
                     if (col == GetColFromName("Fecha validez")) {
-                        if (tipoVenta != null && tipoVenta.toUpperCase().includes("FACTORY ASSIST")
-                            || tipoVenta != null && tipoVenta.toUpperCase().includes("SPOT")
-                            || tipoVenta != null && tipoVenta.toUpperCase().includes("REAPLICACIÓN")
-                        ) {
-                            cellProperties.readOnly = false;
-                        } else {
-                            cellProperties.readOnly = true;
-                        }
+                        // Se elimina la lógica condicional para que la celda siempre sea editable.
+                        cellProperties.readOnly = false;
                     }
 
                     //aplica el estilo a la celda de scrap
