--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
@@ -2007,14 +2007,8 @@
 
                     //determina si angulo A y B están habilitados
                     if (col == GetColFromName("Fecha validez")) {
-                        if (tipoVenta != null && tipoVenta.toUpperCase().includes("FACTORY ASSIST")
-                            || tipoVenta != null && tipoVenta.toUpperCase().includes("SPOT")
-                            || tipoVenta != null && tipoVenta.toUpperCase().includes("REAPLICACIÓN")
-                        ) {
-                            cellProperties.readOnly = false;
-                        } else {
-                            cellProperties.readOnly = true;
-                        }
+                        // Se elimina la lógica condicional para que la celda siempre sea editable.
+                        cellProperties.readOnly = false;
                     }
 
                     //aplica el estilo a la celda de scrap
