--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_cat_defaults/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_cat_defaults/Edit.cshtml
@@ -133,6 +133,36 @@
                             </div>
 
                             <div class="ln_solid"></div>
+                            <div class="form-group row">
+                                <span style="color:black"><b>SCRAP SAN LUIS POTOSI</b></span>
+                            </div>
+
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.scrap_acero_valor_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                                <div class="col-md-2 col-sm-2 ">
+                                    @Html.EditorFor(model => model.scrap_acero_valor_slp, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.scrap_acero_valor_slp, "", new { @class = "text-danger" })
+                                </div>
+                                @Html.LabelFor(model => model.scrap_acero_ganancia_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                                <div class="col-md-2 col-sm-2 ">
+                                    @Html.EditorFor(model => model.scrap_acero_ganancia_slp, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.scrap_acero_ganancia_slp, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.scrap_aluminio_valor_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                                <div class="col-md-2 col-sm-2 ">
+                                    @Html.EditorFor(model => model.scrap_aluminio_valor_slp, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.scrap_aluminio_valor_slp, "", new { @class = "text-danger" })
+                                </div>
+                                @Html.LabelFor(model => model.scrap_aluminio_ganancia_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                                <div class="col-md-2 col-sm-2 ">
+                                    @Html.EditorFor(model => model.scrap_aluminio_ganancia_slp, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.scrap_aluminio_ganancia_slp, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="ln_solid"></div>
                             <div class="item form-group">
                                 <div class="col-md-6 col-sm-6 offset-md-2">
                                     <button type="submit" class="btn btn-success">Guardar</button>
