--- a/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_cat_defaults/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_Forecast_cat_defaults/Index.cshtml
@@ -117,6 +117,33 @@
                                 <input type="text" class="form-control" value="@Html.DisplayFor(model => model.scrap_aluminio_ganancia_silao)" readonly />
                             </div>
                         </div>
+
+                        <div class="ln_solid"></div>
+                        <div class="form-group row">
+                            <span style="color:black"><b>SCRAP SAN LUIS POTOSI</b></span>
+                        </div>
+
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.scrap_acero_valor_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                            <div class="col-md-2 col-sm-2 ">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.scrap_acero_valor_slp)" readonly />
+                            </div>
+                            @Html.LabelFor(model => model.scrap_acero_ganancia_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                            <div class="col-md-2 col-sm-2 ">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.scrap_acero_ganancia_slp)" readonly />
+                            </div>
+                        </div>
+                        <div class="item form-group">
+                            @Html.LabelFor(model => model.scrap_aluminio_valor_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                            <div class="col-md-2 col-sm-2 ">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.scrap_aluminio_valor_slp)" readonly />
+                            </div>
+                            @Html.LabelFor(model => model.scrap_aluminio_ganancia_slp, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                            <div class="col-md-2 col-sm-2 ">
+                                <input type="text" class="form-control" value="@Html.DisplayFor(model => model.scrap_aluminio_ganancia_slp)" readonly />
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div>
